; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_revprops.c_read_packed_data_checksummed.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_revprops.c_read_packed_data_checksummed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*, i32*, i32*)* @read_packed_data_checksummed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_packed_data_checksummed(i32** %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @verify_checksum(i32* %10, i32* %11)
  %13 = call i32 @SVN_ERR(i32 %12)
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32* @svn_stream_from_stringbuf(i32* %14, i32* %15)
  store i32* %16, i32** %9, align 8
  %17 = load i32**, i32*** %5, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @svn_packed__data_read(i32** %17, i32* %18, i32* %19, i32* %20)
  %22 = call i32 @SVN_ERR(i32 %21)
  %23 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %23
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @verify_checksum(i32*, i32*) #1

declare dso_local i32* @svn_stream_from_stringbuf(i32*, i32*) #1

declare dso_local i32 @svn_packed__data_read(i32**, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
